Fix news headline avatar alignment

--- a/frontend/src/global_styles/content/_autocomplete.sass
+++ b/frontend/src/global_styles/content/_autocomplete.sass
@@ -182,9 +182,18 @@ mark.ui-autocomplete-match
 .ng-dropdown-panel
   z-index: 9500 !important
 
+// This is such a big selector because we need to overwrite the ng-select defaults,
+// which comes with a 3-class selector by default.
+.ng-dropdown-panel .ng-dropdown-panel-items div.ng-option
+  display: flex
+
 .ng-option
   font-size: 14px
   line-height: 22px
+
+  .op-avatar 
+    margin-right: 8px
+
 .work-package-table--container .ng-dropdown-panel
   z-index: auto !important
 
