--- a/frontend/src/global_styles/content/_news.sass
+++ b/frontend/src/global_styles/content/_news.sass
@@ -40,17 +40,16 @@
   font-size: 0.8rem
   color: var(--gray-dark)
   display: block
-  padding: 5px 0 5px 40px
+  padding: 5px 0 5px 0px
   line-height: 1.25
 
 .news-author-avatar
   line-height: 1
+
   .op-avatar
-    margin-right: 5px
-    float: left
+    margin-right: 10px
 
 .news--project
-  display: inline
 
 @media screen and (max-width: 679px)
   .news-author
